# third_party_mindspore

./: .gitattributes  .gitignore  BUILD.gn  README.OpenSource  build_helper.py  bundle.json
patches/: 0002-train-and-build.patch  0003-add-js-api.patch  0004-cross-compile-ndkso-fp16-nnrt-train_capi.patch  0005-micro-for-ohos.patch  0006-remove-lite-expression-fix-double-loadso.patch  0007-deobfuscator.patch  0008-upgrade-flatbuffers-fix_crash.patch  0009-npu-zero-copy.patch  0010-micro-dynamic-shape-support-discrete-value.patch  0011-fix-npu-infer-memory-leak-delete-liteGraph.patch  0012-add-mindir-ops.patch  0012-fix-int8-bug.patch  0013-hiappevent.patch  0014-DynamicQuant-strategy-optimization.patch  0015-bugfix-for-cpu-kernel.patch  0016-bugfix-for-argminmax-swish-int8-and-vad-asan.patch  0017-bugfix-for-onnx-parser.patch  0018-nnrt-litegraph-dequant.patch  0019-adaper-NNCore-Api.patch  0020-fix-ocr-gcn-model-crash.patch  0021-add-mindir-ops.patch  0022-adapter-HiAI-Foundation-NPU.patch  0023-support-x86-emulator-build.patch  0024-fix-gcn-model-squeeze-transpose-infershape-not-do.patch  0025-support-kirin-npu-dynamic-dims.patch  0026-fix-depthwise-conv-kernel.patch  0027-reduce-memory-when-npu-compilation-with-cache.patch  0028-fix-onnx-parser-and-cpu-kernel.patch  0029-revert-cache-executor.patch  0030-generate-flatbuffer-notice.patch  0031-fix-matmul-assemble-can-not-protect-stack-in-mutil-thread.patch
test/: BUILD.gn  README.md
test/fuzztest/: BUILD.gn  data.h
test/resource/: ohos_test.xml
test/systemtest/: BUILD.gn  mindspore_system_test.cpp
(+17 files in other folders)
