# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")

module_output_path = "mindspore/"

config("module_private_config") {
  include_dirs = [ "//third_party/mindspore/mindspore-src/source/" ]
}

ohos_systemtest("MindSporeSystemTest") {
  module_out_path = module_output_path
  resource_config_file = "../resource/ohos_test.xml"

  sources = [
    "../utils/common.cpp",
    "../utils/model_utils.cpp",
    "./mindspore_system_test.cpp",
  ]

  configs = [ ":module_private_config" ]

  deps = [
    "//third_party/googletest:gmock",
    "//third_party/googletest:gtest",
    "//third_party/googletest:gtest_main",
    "//third_party/mindspore/mindspore-src/source/mindspore/lite:mindspore_ndk",
  ]

  external_deps = [ "c_utils:utils" ]
}

group("system_test") {
  testonly = true
  deps = [ ":MindSporeSystemTest" ]
}
